# Rein

./: CMakeLists.txt  setup.py
examples/: cartpole_reinforce.py
src/cpp/include/: parameter_server.proto  replay_buffer.h
src/cpp/src/: bindings.cpp  parameter_server.cpp  ppo_core.cpp  replay_buffer.cpp
src/python/: agent.py  environment.py  policy.py  trainer.py  value_function.py
src/python/algorithms/: dqn.py  ppo.py  reinforce.py
